--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -16,7 +16,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
   
-/* Navbar & Dropdown */
+/* Navbar */
 
 .navbar-toggler {
 	font-family: 'Roboto', sans-serif;
@@ -28,26 +28,36 @@ body {
 	font-weight: bolder;
 	cursor: default;
 }
-.topnav, .ddbtn{
-	background-color: #345DA7 !important;
-}
+.topnav {background-color: #345DA7 !important}
 
-.menu:hover, .nbtn:hover, .ddbtn:hover {
+.menu:hover, .navbtn:hover {
 	background-color: #3B8AC4 !important;
 }
 
+/* Dropdown */
+
+.dropdown-menu {
+	background-color: #4BB4DE !important;
+	margin-top: 0px !important;
+	padding: 0px !important;
+	border: 5px solid #4BB4DE !important;
+}
+
+.dropdown:hover .dropdown-menu {display: block}
+
+.ddbtn {
+	background-color: #4BB4DE !important;
+	margin: 1px 0vh !important;
+	border-radius: 5px !important;
+}
+
+.ddbtn:hover {background-color: #3B8AC4 !important}
+
 /* Footer */
 
-.foot{
-	/*background-color: #e38d30;*/
-	background-color: #4BB4DE;
-}
+.foot {background-color: #4BB4DE}
 
-/* Buttons in Footer */
-
-.fbutton {
-	background-color: #4BB4DE;
-}
+.fbutton {background-color: #4BB4DE}
 
 .fbutton:hover {
 	background-color: #75BDE0;
@@ -91,21 +101,16 @@ body {
 	color: #ffecb3;
 }
 
-#popup-content {
-	margin: 5vh 5vw 7vh 3vw;
-}
+#popup-content {margin: 5vh 5vw 7vh 3vw}
 
 #popup-hey {
-	margin-bottom: 4vh; font-size: 5em;
+	margin-bottom: 4vh;
+	font-size: 5em;
 }
 
-#popup-text {
-	font-size: 1.3em;
-}
+#popup-text {font-size: 1.3em}
 
-#popup-buttons {
-	margin-top: 15vh;
-}
+#popup-buttons {margin-top: 15vh}
 
 .popup-button {
 	padding: 2vh 2vw 2vh 2vw;
@@ -115,11 +120,183 @@ body {
 	text-decoration: none !important;
 }
 
-#popup-buttons a {
-	text-decoration: none;
-}
+#popup-buttons a {text-decoration: none}
 
 .popup-button:hover {
 	background-color: #ffecb3;
 	color: #4BB4DE;
 }
+
+
+	/* EFFECTS */
+
+
+		/* Bounce To Right */
+		.hvr-bounce-to-right {
+			display: inline-block;
+			vertical-align: middle;
+			-webkit-transform: perspective(1px) translateZ(0);
+			transform: perspective(1px) translateZ(0);
+			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+			position: relative;
+			-webkit-transition-property: color;
+			transition-property: color;
+			-webkit-transition-duration: 0.5s;
+			transition-duration: 0.5s;
+			border-radius: 5px !important;
+		}
+		.hvr-bounce-to-right:before {
+			content: "";
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background: rgb(32, 153, 209);
+			-webkit-transform: scaleX(0);
+			transform: scaleX(0);
+			-webkit-transform-origin: 0 50%;
+			transform-origin: 0 50%;
+			-webkit-transition-property: transform;
+			transition-property: transform;
+			-webkit-transition-duration: 0.5s;
+			transition-duration: 0.5s;
+			-webkit-transition-timing-function: ease-out;
+			transition-timing-function: ease-out;
+			border-radius: 5px !important;
+		}
+		.hvr-bounce-to-right:hover, .hvr-bounce-to-right:focus, .hvr-bounce-to-right:active {
+			color: white;
+			border-radius: 5px !important;
+		}
+		.hvr-bounce-to-right:hover:before, .hvr-bounce-to-right:focus:before, .hvr-bounce-to-right:active:before {
+			-webkit-transform: scaleX(1);
+			transform: scaleX(1);
+			-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+			transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+			border-radius: 5px !important;
+		}
+
+		/* Icon Grow */
+		.hvr-icon-grow {
+			display: inline-block;
+			vertical-align: middle;
+			-webkit-transform: perspective(1px) translateZ(0);
+			transform: perspective(1px) translateZ(0);
+			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+			-webkit-transition-duration: 0.3s;
+			transition-duration: 0.3s;
+		}
+		.hvr-icon-grow .hvr-icon {
+			-webkit-transform: translateZ(0);
+			transform: translateZ(0);
+			-webkit-transition-duration: 0.3s;
+			transition-duration: 0.3s;
+			-webkit-transition-property: transform;
+			transition-property: transform;
+			-webkit-transition-timing-function: ease-out;
+			transition-timing-function: ease-out;
+		}
+		.hvr-icon-grow:hover .hvr-icon, .hvr-icon-grow:focus .hvr-icon, .hvr-icon-grow:active .hvr-icon {
+			-webkit-transform: scale(1.3) translateZ(0);
+			transform: scale(1.3) translateZ(0);
+		}
+		
+		/* Icon Sink */
+		.hvr-icon-sink {
+			display: inline-block;
+			vertical-align: middle;
+			-webkit-transform: perspective(1px) translateZ(0);
+			transform: perspective(1px) translateZ(0);
+			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+			-webkit-transition-duration: 0.3s;
+			transition-duration: 0.3s;
+		}
+		.hvr-icon-sink .hvr-icon {
+			-webkit-transform: translateZ(0);
+			transform: translateZ(0);
+			-webkit-transition-duration: 0.3s;
+			transition-duration: 0.3s;
+			-webkit-transition-property: transform;
+			transition-property: transform;
+			-webkit-transition-timing-function: ease-out;
+			transition-timing-function: ease-out;
+		}
+		.hvr-icon-sink:hover .hvr-icon, .hvr-icon-sink:focus .hvr-icon, .hvr-icon-sink:active .hvr-icon {
+			-webkit-transform: translateY(4px);
+			transform: translateY(4px);
+		}
+
+		/* Icon Bob */
+		
+		@-webkit-keyframes hvr-icon-bob {
+			0% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+			50% {
+			-webkit-transform: translateY(-2px);
+			transform: translateY(-2px);
+			}
+			100% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+		}
+		@keyframes hvr-icon-bob {
+			0% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+			50% {
+			-webkit-transform: translateY(-2px);
+			transform: translateY(-2px);
+			}
+			100% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+		}
+		@-webkit-keyframes hvr-icon-bob-float {
+			100% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+		}
+		@keyframes hvr-icon-bob-float {
+			100% {
+			-webkit-transform: translateY(-6px);
+			transform: translateY(-6px);
+			}
+		}
+		.hvr-icon-bob {
+			display: inline-block;
+			vertical-align: middle;
+			-webkit-transform: perspective(1px) translateZ(0);
+			transform: perspective(1px) translateZ(0);
+			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+			-webkit-transition-duration: 0.3s;
+			transition-duration: 0.3s;
+		}
+		.hvr-icon-bob .hvr-icon {
+			-webkit-transform: translateZ(0);
+			transform: translateZ(0);
+		}
+		.hvr-icon-bob:hover .hvr-icon, .hvr-icon-bob:focus .hvr-icon, .hvr-icon-bob:active .hvr-icon {
+			-webkit-animation-name: hvr-icon-bob-float, hvr-icon-bob;
+			animation-name: hvr-icon-bob-float, hvr-icon-bob;
+			-webkit-animation-duration: .3s, 1.5s;
+			animation-duration: .3s, 1.5s;
+			-webkit-animation-delay: 0s, .3s;
+			animation-delay: 0s, .3s;
+			-webkit-animation-timing-function: ease-out, ease-in-out;
+			animation-timing-function: ease-out, ease-in-out;
+			-webkit-animation-iteration-count: 1, infinite;
+			animation-iteration-count: 1, infinite;
+			-webkit-animation-fill-mode: forwards;
+			animation-fill-mode: forwards;
+			-webkit-animation-direction: normal, alternate;
+			animation-direction: normal, alternate;
+		}
+  
