--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -39,50 +39,49 @@
 				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N&ensp;</b></span>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-home"></i> Home</button></a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="" data-target="dropdown_target" href="#" data-toggle="dropdown">
-								<button class="nbtn btn text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button></a>
-							<div class="dropdown-menu" 	aria-labelledby="dropdown_target">
-								<ul class="navbar-nav">
-								<a href=".." class="dropdown-item"><button class="btn ddbtn text-white" type="button">Action</button></a>
-								<a href=".." class="dropdown-item"><button class="btn ddbtn text-white" type="button">Another Action</button></a>
-								</ul>
-							</div>	
+								<button class="navbtn btn text-white hvr-icon-sink" type="button"><i class="hvr-icon fas fa-chevron-circle-down"></i> Dropdown</button></a>
+							<div class="dropdown-menu" aria-labelledby="dropdown_target">
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Action</a>
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Another action</a>
+								<a class="ddbtn btn dropdown-item text-white hvr-bounce-to-right" href="..">Another action ancora</a>
+							</div>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-cat"></i> Meme</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-code"></i> Informatica</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-flask"></i> Scienza</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-feather-alt"></i> Dev's Blog</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
 						</li>
 						<li class="navbar-item" id="unlogged_button1">
-							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
 						</li>
 						<li class="navbar-item" id="unlogged_button2">
-							<a href="../login" class="text-decoration-none unlogged buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+							<a href="../login" class="text-decoration-none unlogged buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button1">
-							<a href="../create_post" class="text-decoration-none"><button class="nbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+							<a href="../create_post" class="text-decoration-none"><button class="navbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button2">
-							<a href="../user" class="text-decoration-none logged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
+							<a href="../user" class="text-decoration-none logged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button3">
-							<a href="../logout" class="text-decoration-none logged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+							<a href="../logout" class="text-decoration-none logged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
 						</li>
 					</ul>
 				</div>
@@ -111,7 +110,7 @@
 						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-users"></i> About</button></a>
 						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-tools"></i> Supporto</button></a>
 						<a href="https://github.com/TommyAnd/kevin" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fab fa-github"></i> Github</button></a>
-						<a href="#" class="text-decoration-none back-to-top" title="Torna su"><button class="btn fbutton" type="button"><i class="far fa-arrow-alt-circle-up"></i></button></a>
+						<a href="#" class="text-decoration-none back-to-top" title="Torna su"><button class="btn fbutton hvr-icon-bob" type="button"><i class="hvr-icon far fa-arrow-alt-circle-up"></i></button></a>
 					</div>
 				</div>
 			</footer>	
